# gg_namecard_web

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
css/: output.css
src/: main.rs  panichook.rs
